# tennis-momentum-engine

./: .gitignore  README.md  main.py  pyproject.toml
data/: players_data.csv
models/: comeback_classifier.pkl  upset_predictor.pkl
notebooks/: eda_book.ipynb  preprocessing.ipynb  testing_book.ipynb
src/: data_cleaning.py  data_retrieval.py  eda.py  feature_engineering.py  misc.py  model.py  train.py
