[project]
name = "tennis-momentum-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "streamlit>=1.57.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
